[package]
name = "lunka-src"
description = "Crate for building Lua 5.4.8 with various configurable parameters"
version = "54.8.0"
edition = "2024"
license = "MIT"
authors = ["[aka]bomb"]
repository = "https://github.com/b0mbie/lunka-src"
documentation = "https://docs.rs/lunka-src"
keywords = ["lua"]

[workspace]
members = [
	"test-crate",
]

[dependencies]
cc = "1.2.31"
current_platform = "0.2.0"

[features]
default = []
parallel = ["cc/parallel"]
